--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/gazzar.svg" />
+    <link rel="stylesheet" href="/css/satoshi.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gazzar</title>
   </head>
